--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --bg-color: #fff;
-    --text-color: #221314;
+    --text-color: #525252;
     --second-color: #5a7184;
     --main-color: #6e54fa;
     --big-font:6rem;
@@ -22,9 +22,9 @@ img {
     width: 100%;
     object-fit: cover;
 }
-section {
+/* section {
     margin-block: 2.5rem;
-} 
+}  */
 body {
     font-family: 'Poppins', sans-serif;
     background: var(--bg-color);
@@ -72,7 +72,7 @@ header{
     font-size: 35px;
     font-weight: 700;
     letter-spacing: 2px;
-    color: var(--text-color);
+    color: #525252;
     animation-name: slideInLeft;
     animation-duration: .6s;
     
@@ -120,7 +120,7 @@ header{
     background: url(img/rizal.jpg);
     background-size: cover;
     background-position: center;
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(1,1fr);
     align-items: center;
 }
@@ -169,16 +169,17 @@ header.sticky{
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 }
 .sticky .logo{
-    color: var(--text-color);
+    color:#525252;
 }
 
 .sticky .navbar a{
-    color: var(--text-color);
+    color: #525252;
 }
 
 .text h2{
     font-size: var(--h2-font);
     margin-bottom: 3rem;
+    padding: 2.5rem;
 }
 
 .row-items{
@@ -232,6 +233,7 @@ header.sticky{
 
 .title {
     text-align: center;
+    padding: 2.5rem;
 }
 
 .title h2{
@@ -371,15 +373,22 @@ min-width: 300px;
 }
 .place-preview .preview figure{
     height: 100%;
+    width: 100%;
 }
+.place-preview .preview img{
+    height: 800px;
+}
+
 
 .place-preview .preview section {
     padding: 1rem;
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    margin-block: 2.5rem;
 
 }
+
 
 .place-preview section .preview-info {
     overflow-x: hidden;
@@ -389,19 +398,23 @@ min-width: 300px;
     max-height: 700px;
     display: grid;
     grid-template-columns: 40px auto;
+    margin-block: 2.5rem;
 }
 .place-preview section .preview-info a{
     padding-top: 15px;  
+    margin-block: 2.5rem;
 }
 /* width */
 .place-preview section .preview-info::-webkit-scrollbar {
     width: 10px;
+    margin-block: 2.5rem;
   }
   
   /* Track */
   .place-preview section .preview-info::-webkit-scrollbar-track {
     background: #f1f1f1;
     border-radius: 10px;
+    margin-block: 2.5rem;
 
   }
   
@@ -409,11 +422,13 @@ min-width: 300px;
   .place-preview section .preview-info::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 10px;
+    margin-block: 2.5rem;
   }
   
   /* Handle on hover */
   .place-preview section .preview-info::-webkit-scrollbar-thumb:hover {
     background: #555;
+    margin-block: 2.5rem;
   }
 
   .place-preview .preview .bx-check-double::before{
@@ -435,7 +450,7 @@ min-width: 300px;
     font-weight: 500;
     padding: 0;
     margin-left: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     font-size: 1.2rem;
     animation-name: slideInRight;
     animation-duration: 1.2s;
@@ -445,7 +460,7 @@ min-width: 300px;
     line-height: 1.5;
     padding: .2rem 0;
     margin-right: 3rem;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     color: #777;
     animation-name: slideInRight;
     animation-duration: 1.4s;
@@ -479,12 +494,14 @@ min-width: 300px;
 .news-text h2{
     font-size: var(--h2-font);
     margin-bottom: 5px;
+    padding-top: 50px;
 
 }
 .news-text p{
     font-size: var(--p-font);
     color: var(--second-color);
     line-height: 30px;
+    padding-bottom: 50px;
 }
 .newsletter form{
     max-width: 100%;
@@ -528,11 +545,11 @@ min-width: 300px;
 
 .footer{
     padding: 50px 0;
-
 }
 
 .list{
     width: 25%;
+    
 }
 .list h4{
     font-size: 21px;
@@ -594,16 +611,7 @@ min-width: 300px;
     font-size:13px;
 }
 @media (max-width:1400px){
-    header{
-        padding: 17px 3%;
-    }
-    header.sticky{
-        padding: 10px 3%;
-    }
-    section{
-        /* padding: 80px 3%; */
-        transition: .2s;
-    }
+
     :root{
         --big-font:4.5rem;
         --h2-font:2.3rem;
@@ -614,12 +622,22 @@ min-width: 300px;
 @media (max-width:1040px){
     #menu-icon{
         display: block;
-        color: #fff;
+        color: #525252;
         padding-right: 30px;
-        transition: .2s;
     }
     .sticky #menu-icon{
         color: var(--text-color);
+        padding-right: 0;
+    }
+    header{
+        padding-left: 60px;
+        padding-right: 0px;
+    }
+    header.sticky{
+        background: var(--bg-color);
+        padding-left: 60px;
+        padding-right: 30px;
+        box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
     }
     .home{
         height: 88vh;
@@ -639,7 +657,7 @@ min-width: 300px;
     }
     .navbar a{
         display: block;
-        margin: 1.2rem 0;
+        margin: 1.5rem 0;
     }
     .sticky .navbar a{
         color: var(--bg-color);
@@ -653,6 +671,15 @@ min-width: 300px;
     .list{
         width: 50%;
         margin-bottom: 12px;
+    }
+    .newsletter form{
+        padding-bottom: 30px;
+    }
+    .list{
+        width: 50%;
+        padding-right: 60px;
+        transition: 1s;
+
     }
     /* .package-content{
 
@@ -677,7 +704,7 @@ min-width: 300px;
     }  
     
 } 
-@media (max-width:575px){
+/* @media (max-width:576px){
     .list{
         width: 100%;
     }
@@ -749,57 +776,359 @@ min-width: 300px;
 
     }
      
-}
+} */
 
-@media (max-width:296px) {
-    header{
-        padding: 17px 3%;
-        transition: .2s;
-    }
-
-    header.sticky{
-        transition: .2s;
-    }
-    section{
-        padding: 80px 3%;
-        transition: .2s;
-    }
+@media (max-width:426px) {
     :root{
-        --big-font:2rem;
-        --h2-font:1rem;
+        --big-font:1.5rem;
+        --h2-font:.5rem;
         --p-font: 1rem;
         transition: .2s;
     }
+
+    #menu-icon.bx.bx-menu::before{
+        padding-right: 0px;
+        color: var(--text-color);
+        font-size: 30px;
+        z-index: 10001;
+        cursor: pointer;
+        display: block;
+    }
+    header{
+        padding-top: 10px;
+        padding-left: 50px;
+        transition: .2s;
+    }
+    .logo{
+        border-bottom: #525252 2px solid;
+        font-size: 18px;
+        /* padding-inline: 30px; */
+        font-weight: 800;
+        letter-spacing: 1px;
+        color: #525252;
+        
+    }
+    .home-text h1{
+        font-size: 35px;
+        color: #525252;
+        font-weight: 800;
+        letter-spacing: 2px;
+        margin-bottom: 20px;
+    }
+    .home-text p{
+        color: #ffffffbf;
+        font-size: 12px;
+        font-weight: 400;
+        line-height: 20px;
+        margin-bottom: 30px;
+    }
+    .home-btn{
+        font-size: 12px;
+        font-weight: 400;
+        padding: 5px 20px;
+        background: #ffffffbf;
+        color: #221314;
+        border-radius: 20px;
+    }
+    .sticky #menu-icon{
+        color: var(--text-color);
+    }
+    
+    header{
+        padding-left: 50px;
+        padding-right: -20px;
+    }
+    header.sticky{
+        background: var(--bg-color);
+        padding-left: 50px;
+        padding-right: 20px;
+    }
+    section{
+        padding: 30px 3%;
+        transition: .2s;
+    } 
     .text h2{
-        font-size: 2rem;
-        padding-left: 40px;
+        padding: 0;
+        font-size: 1.5rem;
         transition: .2s;
     }
-    .place-preview{
-        height: 10rem;
-        transition: .2s;
+    .row-items{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 2rem;
+        flex-wrap: wrap;
+        text-align: center;
     }
+    .container-box{
+        background-color: var(--bg-color);
+        border: 1px solid #f0eded;
+        padding: 10px 10px;
+        cursor: pointer;
+        margin: 0;
+    }
+    .container-box h4{
+        font-size: 15px;
+    }
+    .container-box p{
+        font-size: 10px;
+        color: var(--second-color);
+    }
+    .title{
+        text-align: center;
+        padding: 0;
+    }
+    .title h2{
+        padding: 0;
+        font-size: 24px;
+        line-height: 1.2;
+    }
+    .package-container img{
+        width: 200px;
+        height: 300px;
+        border-radius: 20px;
+    }
+    .thum{
+        height: 300px;
+        width: 200px;
+        border-radius: 20px;
+        position: relative;
+        will-change: filter;
+        cursor: pointer;
+        overflow: hidden;
+        transition: all .3s cubic-bezier(.445, .05, .55, .95);
+    }
+    .thum h3{
+        font-size: 1.2rem;
+        font-weight: 700;
+        /* color: var(--bg-color); */
+        position: absolute;
+        top: 5%;
+        right: 10%;
+       
+    }
+    .package-content{
+        gap: 1rem;
+    }
+    .box {
+        height: 100%;
+        flex: 1 1 30%;
+        min-width: 200px;
+        max-width: 200px;
+    }
+    .dest-content h4{
+        font-size: 15px;
+    }
+    .dest-content .location p{
+        font-size: 12px;
+    }
+    .stars{
+        font-size: 15px;
+    }
+    .content img{
+        height: 200px;
+    }
+    .content h5{
+        position: absolute;
+        font-size: 18px;
+        font-weight: 500;
+        color: var(--bg-color);
+        left: 15px;
+        bottom: 40px;
+    }
+    .content p{
+        font-size: 12px;
+        color: var(--bg-color);
+        left: 15px;
+        bottom: 20px;
+        letter-spacing: 2px;
+    }
+
+    .place-preview .preview.active {
+        display: block;
+    }
+    .place-preview .preview.active figure{
+        max-height: 200px;
+    }
+    .place-preview .preview.active section{
+        margin: 0;
+        height: auto;
+    }
+    .preview.active img{
+        height: 200px;
+        width: 100%;
+    }
+
     .place-preview .preview h5{
         color: #444;
-        padding: 1rem 0;
-        font-size: 1rem;
+        font-size: 18px;
         transition: .2s;
     }
-    .place-preview .preview img{
-        display: none;
-        transition: .2s;
+    .place-preview .preview h4{
+        font-size: 12px;
+        margin-bottom: 0;
+    }
+    .place-preview .preview .preview-info{
+        height: 100%;
+        max-height: 600px;
+        
     }
     
     .place-preview .preview p{
         line-height: 1;
-        padding: 1rem 0;
-        font-size: 15px;
-        text-align: center;
+        margin-bottom: 1rem;
         color: #777;
         transition: .2s;
     }
-   
-    .dest-content h4{
-        font-size: 20px;
+    .place-preview section .preview-info {
+        overflow-x: hidden;
+        overflow-y: auto;
+        padding-right: 3px;
+        height: 100%;
+        max-height: 1000px;
+        display: grid;
+        grid-template-columns: 40px auto;
+        margin-block: .5rem;
     }
+    .place-preview .preview p{
+        line-height: 1.5;
+        padding: .2rem 0;
+        margin-right: 1rem;
+        font-size: 12px;
+    }
+    .place-preview .preview .bx-check-double::before{
+        font-size: 18px;
+
+      }
+    .place-preview .preview .bx-x-circle{
+        font-size: 1.5rem;
+        z-index: 1;
+    }
+    
+    .place-preview .preview .bx-x-circle:hover{
+        background-color: #7d7c7c;
+        border-radius: 50px;
+    }
+    .place-preview section .preview-info::-webkit-scrollbar {
+        width: 5px;
+        margin-block: 2.5rem;
+      }
+ 
+   
+    .news-text h2{
+        font-size: 24px;
+    }
+    .newsletter{
+        gap: 1rem;
+    }
+    .news-text p{
+        font-size: 13px;
+        line-height: 20px;
+    }
+    .newsletter form{
+        max-width: 100%;
+        width: 290px;
+        position: relative;
+    }
+    .newsletter form input:first-child{
+        padding: 15px 150px 15px 15px;
+    }
+    .newsletter form input:last-child{
+        padding:8px 20px;
+        border-radius: 15px;
+        background: #519259;
+    }
+    .footer{
+        padding-top: 30px;
+        padding-bottom: 0;
+    }
+    
+
+    .list{
+        width: 50%;
+        padding-right: 60px;
+
+    }
+    .list h4{
+        font-size: 12px;
+        color: var(--bg-color);
+        margin-bottom: 30px;
+        position: relative;
+
+    }
+    .list h4::before{
+        content: "";
+        position: absolute;
+        height: 2px;
+        width: 60px;
+        left: 0;
+        bottom: -10px;
+        background: var(--bg-color);
+    }
+    .list ul li:not(last-child){
+        margin-bottom: 5px;
+    }
+    .list ul li a{
+        color: #ffffffbf;
+        font-size: 10px;
+        display: block;
+        transition: .3s;
+    }
+    .list ul li a:hover{
+        color: var(--bg-color);
+        transform: translateX(14px);
+    }
+    .social a{
+        
+        height: 30px;
+        width: 30px;
+        background: var(--bg-color);
+        color: #519259;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        border-radius: 15px;
+        transition: .3s;
+        margin-right: 10px;
+        margin-bottom: 20PX;
+    }
+    .list .social a:hover{
+        transform: scale(1.1);
+    }
+    .end-text{
+        text-align: center;
+        z-index: 1;
+        background-color: #3a6840;
+    } 
+    .end-text p{
+        color: var(--bg-color);
+        line-height: 1rem;
+        font-size: 10px;
+        letter-spacing: 2px;
+        background-color: transparent;
+        padding-top: 10px;
+        padding-bottom: 10px;
+
+    }
+    .end-text p span{
+        font-size:8px;
+    }
+    #contact{
+        padding-top: 10px;
+        padding-bottom: 0;
+        padding-inline: 0;
+        
+    }
+
+
+
+
+
+
+
+    
+
+  
+
+
 }
