--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ min-width: 300px;
     width: 100%;
 }
 .place-preview .preview img{
-    height: 800px;
+    height: 900px;
 }
 
 
@@ -460,7 +460,7 @@ min-width: 300px;
     line-height: 1.5;
     padding: .2rem 0;
     margin-right: 3rem;
-    font-size: 1.1rem;
+    font-size: 1.3rem;
     color: #777;
     animation-name: slideInRight;
     animation-duration: 1.4s;
@@ -621,10 +621,12 @@ min-width: 300px;
 
 @media (max-width:1040px){
     #menu-icon{
-        display: block;
+        display: initial;
         color: #525252;
         padding-right: 30px;
+        z-index: 100001;
     }
+
     .sticky #menu-icon{
         color: var(--text-color);
         padding-right: 0;
@@ -658,7 +660,7 @@ min-width: 300px;
     .navbar a{
         display: block;
         margin: 1.5rem 0;
-    }
+    } 
     .sticky .navbar a{
         color: var(--bg-color);
     }
@@ -699,84 +701,166 @@ min-width: 300px;
         display: grid;
         grid-template-columns: 50%;
         justify-content: center;
-
-
     }  
-    
-} 
-/* @media (max-width:576px){
-    .list{
-        width: 100%;
-    }
-    .newsletter form{
-        width: 350px;
-    }
-    :root{
-        --big-font:3.8rem;
-        --h2-font:1.8rem;
-        transition: .2s;
-    }
-    
-    .text{
-        text-align: center;
-    }
     .place-preview .preview.active {
         display: block;
     }
     .place-preview .preview.active figure{
-        max-height: 300px;
+        max-height: 250px;
     }
     .place-preview .preview.active section{
         margin: 0;
         height: auto;
     }
+    .preview.active img{
+        height: 250px;
+        width: 100%;
+    }
+
     .place-preview .preview h5{
         color: #444;
-        font-size: 2rem;
+        font-size: 30px;
         transition: .2s;
+    }
+    .place-preview .preview h4{
+        font-size: 18px;
+        margin-bottom: 0;
     }
     .place-preview .preview .preview-info{
         height: 100%;
-        max-height: 400px;
+        max-height: 900px;
+        
         
     }
     
     .place-preview .preview p{
-        line-height: 1.3;
+        line-height: 1;
         margin-bottom: 1rem;
         color: #777;
+        
         transition: .2s;
     }
-    
-    .home{
-        height: 85vh;
-        transition: .2s;
+    .place-preview section .preview-info {
+        padding-top: 30px;
+        padding-right: 3px;
+        height: 100%;
+        max-height: 1000px;
+        display: grid;
+        grid-template-columns: 40px auto;
+        margin-block: .5rem;
+        
     }
+    .place-preview .preview p{
+        line-height: 1.5;
+        padding: .2rem 0;
+        margin-right: 1rem;
+        font-size: 18px;
+    }
+    .place-preview .preview .bx-check-double::before{
+        font-size: 20px;
 
+      }
+    .bx.bx-check-double{
+        margin-top: 5px;
+      }
     .place-preview .preview .bx-x-circle{
-        position: absolute;
-        top: 3.7rem; right: 3.5rem;
-    
-        cursor: pointer;
-        color: #e5e3e3;
         font-size: 2rem;
+        color: #8b8f89;
         z-index: 1;
-    
     }
     
     .place-preview .preview .bx-x-circle:hover{
         background-color: #7d7c7c;
         border-radius: 50px;
     }
-    .package-content{
-
-        display: grid;
-        grid-template-columns: 100%;
-        justify-content: center;
-
-    }
+    .place-preview section .preview-info::-webkit-scrollbar-track {
+        margin-block: 0;
+    
+      }
+    .place-preview section .preview-info::-webkit-scrollbar {
+        width: 5px;
+        margin-block: 2.5rem;
+      }
      
-} */
+} 
+
+@media (max-width:576px){
+   .place-preview .preview.active {
+        display: block;
+    }
+    .place-preview .preview.active figure{
+        max-height: 200px;
+    }
+    .place-preview .preview.active section{
+        margin: 0;
+        height: auto;
+    }
+    .preview.active img{
+        height: 200px;
+        width: 100%;
+    }
+
+    .place-preview .preview h5{
+        color: #444;
+        font-size: 18px;
+        transition: .2s;
+    }
+    .place-preview .preview h4{
+        font-size: 12px;
+        margin-bottom: 0;
+    }
+    .place-preview .preview .preview-info{
+        height: 100%;
+        max-height: 270px;
+        
+    }
+    
+    .place-preview .preview p{
+        line-height: 1;
+        margin-bottom: 1rem;
+        color: #777;
+        overflow-x: hidden;
+        overflow-y: auto;
+        transition: .2s;
+    }
+    .place-preview section .preview-info {
+        
+        padding-right: 3px;
+        height: 100%;
+        max-height: 1000px;
+        display: grid;
+        grid-template-columns: 40px auto;
+        margin-block: .5rem;
+    }
+    .place-preview .preview p{
+        line-height: 1.5;
+        padding: .2rem 0;
+        margin-right: 1rem;
+        font-size: 12px;
+    }
+    .place-preview .preview .bx-check-double::before{
+        font-size: 18px;
+
+      }
+    .place-preview .preview .bx-x-circle{
+        font-size: 1.5rem;
+        z-index: 1;
+    }
+    
+    .place-preview .preview .bx-x-circle:hover{
+        background-color: #7d7c7c;
+        border-radius: 50px;
+    }
+    .place-preview section .preview-info::-webkit-scrollbar-track {
+        margin-block: 0;
+    
+      }
+    .place-preview section .preview-info::-webkit-scrollbar {
+        width: 5px;
+        margin-block: 2.5rem;
+      }
+     
+} 
 
 @media (max-width:426px) {
     :root{
@@ -787,7 +871,7 @@ min-width: 300px;
     }
 
     #menu-icon.bx.bx-menu::before{
-        padding-right: 0px;
+        padding-right: 50px;
         color: var(--text-color);
         font-size: 30px;
         z-index: 10001;
@@ -795,7 +879,7 @@ min-width: 300px;
         display: block;
     }
     header{
-        padding-top: 10px;
+        padding-top: 0px;
         padding-left: 50px;
         transition: .2s;
     }
@@ -809,7 +893,7 @@ min-width: 300px;
         
     }
     .home-text h1{
-        font-size: 35px;
+        font-size: 45px;
         color: #525252;
         font-weight: 800;
         letter-spacing: 2px;
@@ -831,7 +915,35 @@ min-width: 300px;
         border-radius: 20px;
     }
     .sticky #menu-icon{
+        display: initial;
         color: var(--text-color);
+    }
+    .navbar{
+        position: absolute;
+        top: 0;
+        right: -100%;
+        width: 250px;
+        height: 120vh;
+        background: #6caf7a;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 150px 30px;
+        padding-right: 100px;
+        transition: 0.5s all;
+    }
+    .navbar a{
+        display: block;
+        margin: 1rem 0;
+    } 
+    .sticky .navbar a{
+        color: var(--bg-color);
+    }
+    .navbar a:hover{
+        color: var(--text-color);
+    }
+    .open{
+        right: 0;
     }
     
     header{
@@ -969,7 +1081,7 @@ min-width: 300px;
     }
     .place-preview .preview .preview-info{
         height: 100%;
-        max-height: 600px;
+        max-height: 270px;
         
     }
     
@@ -977,14 +1089,15 @@ min-width: 300px;
         line-height: 1;
         margin-bottom: 1rem;
         color: #777;
+        overflow-x: hidden;
+        overflow-y: auto;
         transition: .2s;
     }
     .place-preview section .preview-info {
-        overflow-x: hidden;
-        overflow-y: auto;
+        
         padding-right: 3px;
         height: 100%;
-        max-height: 1000px;
+        max-height: 100px;
         display: grid;
         grid-template-columns: 40px auto;
         margin-block: .5rem;
@@ -1008,10 +1121,15 @@ min-width: 300px;
         background-color: #7d7c7c;
         border-radius: 50px;
     }
+    .place-preview section .preview-info::-webkit-scrollbar-track {
+        margin-block: 0;
+    
+      }
     .place-preview section .preview-info::-webkit-scrollbar {
         width: 5px;
         margin-block: 2.5rem;
       }
+      
  
    
     .news-text h2{
@@ -1119,16 +1237,5 @@ min-width: 300px;
         padding-inline: 0;
         
     }
-
-
-
-
-
-
-
-    
-
-  
-
 
 }
